--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "imfp"
-version = "1.0.1"
+version = "1.0.2"
 description = "Python package for downloading economic data from the International Monetary Fund JSON RESTful API endpoint."
 authors = ["Christopher C. Smith <chriscarrollsmith@gmail.com>"]
 license = "MIT"
@@ -23,12 +23,12 @@ packages = [
 python = "^3.8"
 pandas = "^1.5.3"
 requests = "^2.28.2"
-ratelimiter = "^1.2.0.post0"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
 pytest-runner = "*"
 flake8 = "*"
+responses = "^0.23.1"
 
 [build-system]
 requires = ["poetry-core"]
