--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -20,14 +20,8 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Run image
-        uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: ${{ matrix.poetry-version }}
-      with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
+      - name: Install and configure Poetry
+        uses: snok/install-poetry@v1
       - name: Load cached venv
         id: cached-poetry-dependencies
         uses: actions/cache@v3
