--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [latest]
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
         poetry-version: [latest]
         os: [windows-latest]
     runs-on: ${{ matrix.os }}
@@ -28,6 +28,9 @@ jobs:
         with:
           path: .venv
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+      - name: Install dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction --no-root
       - name: Install project
         run: poetry install --no-interaction
       - name: Run tests
