--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -36,11 +36,12 @@ jobs:
         run: poetry install --no-interaction --no-root
       - name: Install project
         run: poetry install --no-interaction
-      - name: Activate venv
+      - name: Activate venv windows
         run: |
           source .venv/scripts/activate
           pytest --version
         if: runner.os == 'Windows'
+      - name: Activate venv other
         run: |
           source .venv/bin/activate
           pytest --version
