--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,7 +27,7 @@ jobs:
         uses: snok/install-poetry@v1
       - name: Configure Poetry
         run: |
-          poetry config settings.virtualenvs.in-project true
+          poetry config virtualenvs.in-project true
       - name: Install project
         run: |
           poetry install --no-interaction
