--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -43,4 +43,4 @@ jobs:
         if: runner.os != 'Windows'
       - name: Run tests
         run: |
-          py.test tests
+          py -m pytest tests
