--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,29 +2,44 @@ name: build-test
 
 on:
   push:
-    branches: [main]
+    branches: [main, master]
   pull_request:
-    branches: [main]
+    branches: [main, master]
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: ["3.11"]
-
+        poetry-version: [latest]
+        os: [windows-latest]
+    defaults:
+      run:
+        shell: bash
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install and configure Poetry
+        uses: snok/install-poetry@v1
+      - name: Configure Poetry
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Test with pytest
+          poetry config virtualenvs.in-project true
+      - name: Install project
         run: |
-          pytest
+          poetry install --no-interaction
+      - name: Activate venv windows
+        run: |
+          source .venv/scripts/activate
+          pytest --version
+          pytest tests
+        if: runner.os == 'Windows'
+      - name: Activate venv other
+        run: |
+          source .venv/bin/activate
+          pytest --version
+          pytest tests
+        if: runner.os != 'Windows'
