--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.11"]
+        python-version: ["3.7","3.8","3.9","3.10","3.11"]
         poetry-version: [latest]
         os: [windows-latest]
     defaults:
@@ -31,7 +31,7 @@ jobs:
       - name: Install project
         run: |
           poetry install --no-interaction
-      - name: Activate venv windows
+      - name: Run tests with pytest
         run: |
           source .venv/scripts/activate
           pytest --version
