--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,10 @@ python = "^3.8"
 pandas = "^1.5.3"
 requests = "^2.28.2"
 
-[tool.poetry.dev-dependencies]
-pytest = "*"
-pytest-runner = "*"
-flake8 = "*"
+[tool.poetry.group.dev.dependencies]
 responses = "^0.23.1"
+pytest = "^7.2.2"
+pytest-runner = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
