--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,9 +11,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.7","3.8","3.9","3.10","3.11"]
+        python-version: ["3.7", "3.11"]
         poetry-version: [latest]
-        os: [windows-latest]
+        os: [windows-latest, ubuntu-latest, macos-latest]
     defaults:
       run:
         shell: bash
