--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,9 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "*"
-pandas = "*"
-requests = "*"
+python = "^3.8"
+pandas = "^1.5.3"
+requests = "^2.28.2"
 
 [tool.poetry.group.dev.dependencies]
 responses = "^0.23.1"
