--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ requests = "^2.28.2"
 responses = "^0.23.1"
 pytest = "^7.2.2"
 pytest-runner = "^6.0.0"
+black = "^23.3.0"
 
 [build-system]
 requires = ["poetry-core"]
