--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "imfp"
-version = "1.0.8"
+version = "1.1.0"
 description = "Python package for downloading economic data from the International Monetary Fund JSON RESTful API endpoint."
 authors = ["Christopher C. Smith <chriscarrollsmith@gmail.com>"]
 license = "MIT"
@@ -29,6 +29,7 @@ responses = "^0.23.1"
 pytest = "^7.2.2"
 pytest-runner = "^6.0.0"
 black = "^23.3.0"
+pytest-mock = "^3.10.0"
 
 [build-system]
 requires = ["poetry-core"]
