--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         python-version: ["3.8", "3.12"]
         poetry-version: [latest]
-        os: [windows-latest, ubuntu-latest, macos-latest]
+        os: [ubuntu-latest]
     defaults:
       run:
         shell: bash
@@ -31,13 +31,24 @@ jobs:
           poetry install
       - name: Run tests with pytest
         run: |
-          poetry shell
-          pytest --version
-          pytest tests
-      - name: Publish any new version to PyPi
-        run: |
+          poetry run pytest --version
+          poetry run pytest tests
+    outputs:
+      matrix: ${{ toJson(matrix) }}
+
+  publish:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.8'
+      - name: Install and configure Poetry
+        uses: snok/install-poetry@v1
       - name: Publish to PyPi
         run: |
+          poetry build
           poetry publish --build
           if [ $? -ne 0 ]; then
             echo "Warning: Version has not been incremented. No new version published."
