Use PyPi API token since authorized publisher deployment isn't working

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -46,8 +46,10 @@ jobs:
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1
       - name: Publish to PyPi
+        env:
+          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
         run: |
-          poetry publish --build
+          poetry publish --build -u __token__ -p $PYPI_TOKEN
           if [ $? -ne 0 ]; then
             echo "Warning: Version has not been incremented. No new version published."
           fi
