Run black with poetry in Github Actions workflow

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -46,8 +46,7 @@ jobs:
         uses: snok/install-poetry@v1
       - name: Format code with black
         run: |
-          black imfp
-          black tests
+          poetry run black .
       - name: Build README.md
         run: |
           poetry run python README_files/render.py
