--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,9 @@ requests = "^2.28.2"
 responses = "^0.23.1"
 pytest = "^7.2.2"
 pytest-runner = "^6.0.0"
-black = "^23.3.0"
+black = "^24.3.0"
 pytest-mock = "^3.10.0"
+nbconvert = "^7.16.3"
 
 [build-system]
 requires = ["poetry-core"]
