ci: install dependencies before running black code formatter

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -44,6 +44,9 @@ jobs:
           python-version: '3.12'
       - name: Install and configure Poetry
         uses: snok/install-poetry@v1
+      - name: Install project
+        run: |
+          poetry install
       - name: Format code with black
         run: |
           poetry run black .
