--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -37,6 +37,8 @@ jobs:
   render:
     needs: test
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
