--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "imfp"
-version = "1.1.1"
+version = "1.1.2"
 description = "Python package for downloading economic data from the International Monetary Fund JSON RESTful API endpoint."
 authors = ["Christopher C. Smith <chriscarrollsmith@gmail.com>"]
 license = "MIT"
@@ -19,9 +19,10 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-pandas = "^1.5.3"
-requests = "^2.28.2"
+python = "^3.10"
+pandas = "^2.2.2"
+requests = "^2.32.3"
+numpy = "^2.1.1"
 
 [tool.poetry.group.dev.dependencies]
 responses = "^0.23.1"
